feat: Enhance compatibility with older Bukkit versions and add unit tests for command alias behavior